[package]
name = "axum_server"
version = "0.2.0"
edition = "2021"

[dependencies]
logger = { git = "https://github.com/jeffersoncbd/logger.git" }
dotenvy = "0.15.7"
axum = "0.8.1"
tower = "0.5.2"
tokio = "1.43.0"
serde_json = "1.0.138"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
